# cpos

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile  README.md  linker.ld
bootloader/: bootloader.s
docs/: INSTALLATION.md  USAGE.md
include/: kernel.h  rust_interface.h  test.h  uart.h  vectors.h
init/: init.c
kernel/: kernel.c  vectors.c
lib/: uart.c
rust_kernel/: Cargo.toml  lib.rs
rust_kernel/memory/: allocator.rs  mod.rs
rust_kernel/syscall/: handler.rs  mod.rs  numbers.rs
