[package]
name = "rust_kernel"
version = "0.2.0"
edition = "2021"  # Using 2021 edition for better stability

[lib]
name = "rust_kernel"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
spin = "0.10.0"

[profile.dev]
panic = "abort"  # Don't unwind on panic

[profile.release]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization